chore: 优化任务管理和task命令
